--- a/index.html
+++ b/index.html
@@ -19,27 +19,27 @@
 
         h2 {
             color: #3e3e3e;
-            text-align: center; /* Centraliza os títulos */
+            text-align: center; 
         }
 
         p {
-            text-align: center; /* Centraliza os parágrafos */
-            max-width: 600px; /* Define uma largura máxima para melhor legibilidade */
-            margin: 0 auto; /* Centraliza o parágrafo */
+            text-align: center; 
+            max-width: 600px; 
+            margin: 0 auto; 
         }
 
         .image-space {
             text-align: center;
             margin: 20px 0;
-            padding: 10px; /* Espaçamento interno */
-            display: flex; /* Permite usar flexbox para centralização */
-            flex-direction: column; /* Organiza os itens em coluna */
-            align-items: center; /* Centraliza os itens horizontalmente */
+            padding: 10px; 
+            display: flex; 
+            flex-direction: column;
+            align-items: center; 
         }
 
         .image-space img {
-            max-width: 100%; /* Faz a imagem ocupar no máximo 100% do espaço disponível */
-            height: auto; /* Mantém a proporção da imagem */
+            max-width: 100%; 
+            height: auto; 
         }
 
         .nav-box {
