--- a/pagina2.html
+++ b/pagina2.html
@@ -18,7 +18,7 @@
         }
 
         #profile-image {
-            width: 300px; /* Aumenta o tamanho da imagem */
+            width: 300px; 
             height: auto;
             display: block;
             margin: 0 auto;
@@ -34,11 +34,11 @@
         #main-content h1 {
             text-align: center;
             margin-bottom: 20px;
-            color: #000000; /* Cor preta para o título */
+            color: #000000; 
         }
 
         #main-content h2 {
-            color: #000000; /* Cor preta para os subtítulos */
+            color: #000000; 
             text-align: center;
         }
 
@@ -139,7 +139,7 @@
             <a href="pagina3.html">Ir para Página 3</a>
         </div>
         <div class="nav-box">
-            <a href="pagina4.html">Ir para Página 4</a> <!-- Nova opção para ir à Página 4 -->
+            <a href="pagina4.html">Ir para Página 4</a> 
         </div>
     </div>
 </body>
